<resources>
    <string name="app_name">Procurement Management</string>
    <string name="site_type">Select the site</string>
    <string name="site_location">Select the location</string>
    <string name="create_order">Create Order</string>
    <string name="ongoing_order">Ongoing Orders</string>
    <string name="created_date">Created Date:</string>
    <string name="order_id">Order Id:</string>
    <string name="next">Next</string>
    <string name="date_from">Date From:</string>
    <string name="date_to">Date To:</string>
    <string name="dep_status">Department Status:</string>
    <string name="edit">Update</string>
    <string name="delete">Remove</string>
    <string name="space">space</string>
    <string name="create_new_order">Create New Order</string>
    <string name="payments">Invoices</string>
    <string name="quantity_type">Quantity Type</string>
    <string name="select_material">Select Material</string>
    <string name="select_quantity">Select Quantity</string>
    <string name="summary">Summary</string>
    <string name="oder_confirm"><b>Do you want to confirm order?</b></string>
    <string name="oder_confirm_quotation"><b>Do you want to confirm quotation?</b></string>
    <string name="order_summary"><u><b>Order Summary</b></u></string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="site_code">Site Code :</string>
    <string name="site_name">Site Name :</string>
    <string name="site_location_name">Site Location :</string>
    <string name="total_cost">Total Cost</string>
    <string name="cancel">Cancel</string>
    <string name="confirm">Confirm</string>
    <string name="quotations">Quotations</string>
    <string name="materials"><b>Materials</b></string>
    <string name="deadline_period"><b>DeadLine Period</b></string>
    <string name="site_info"><b>Site Information</b></string>
    <string name="fill_quotation_form"><b>Fill Quotation Form</b></string>
    <string name="create_quotation"><b>Create Quotation</b></string>
    <string name="estimated_date_from">Estimated Date From</string>
    <string name="estimated_date_to">Estimated Date To</string>
    <string name="estimated_quantity">Estimated Quantity</string>
    <string name="estimated_unit_price">Estimated Unit Price</string>
    <string name="material_details"><b>Material Details</b></string>
    <string name="estimated_cost">Estimated Cost</string>
    <string name="estimated_unit_cost">Estimated Unit Cost</string>
    <string name="receive_orders">Receive Orders</string>
    <string name="purchase_orders_details"><b>Purchase Orders Details</b></string>
    <string name="purchase_orders_ref">Purchase Orders Reference</string>
    <string name="manager">Manager</string>
    <string name="create_delivery">Create Delivery</string>
    <string name="delivery_person_name">Delivery Person Name</string>
    <string name="delivery_person_no">Delivery Person No</string>
    <string name="delivery_status"><b>Delivery Status</b></string>
    <string name="delivery">Delivery</string>
    <string name="vehicle_no">Vehicle No</string>
    <string name="delivery_note">Delivery Note</string>
    <string name="invoice_Id">Invoice ID</string>
    <string name="por">POR</string>
    <string name="site">Site</string>
    <string name="location">Location</string>
    <string name="createdDate">Created Date</string>
    <string name="total_price">Total Amount</string>
    <string name="create_invoice">Create Invoice</string>
    <string name="delivered_order_no">Select the Delivered Order Id</string>
    <string name="delivered_quantity">Delivered Quantity</string>
    <string name="feedback">Feedback</string>
    <string name="pending">QUOTATION SUBMITTED</string>
    <string name="date">2021/10/09</string>


</resources>