<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragment.quotation.QuotationSummary">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.cardview.widget.CardView
            android:id="@+id/cardView"
            android:layout_width="350dp"
            android:layout_height="225dp"
            android:layout_marginHorizontal="20dp"
            android:layout_marginVertical="10dp"
            android:layout_marginTop="24dp"
            android:background="#f4f74a"
            android:elevation="6dp"
            app:cardCornerRadius="10dp"
            app:layout_constraintEnd_toEndOf="@+id/textView7"
            app:layout_constraintStart_toStartOf="@+id/textView7"
            app:layout_constraintTop_toBottomOf="@+id/textView7">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="#e2e8e1">

                <View
                    android:id="@+id/view2"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="#000"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.379"
                    tools:ignore="MissingConstraints" />

                <TextView
                    android:id="@+id/textView9"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/material_details"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.108"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.077" />

                <TextView
                    android:id="@+id/textView11"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="26dp"
                    android:layout_marginTop="8dp"
                    android:text="@string/estimated_date_from"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textView10" />

                <TextView
                    android:id="@+id/textView12"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="6dp"
                    android:layout_marginTop="8dp"
                    android:text="@string/estimated_date_to"
                    app:layout_constraintEnd_toEndOf="@+id/textView11"
                    app:layout_constraintHorizontal_bias="0.54"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textView11" />

                <TextView
                    android:id="@+id/textView16"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:text="@string/estimated_cost"
                    app:layout_constraintStart_toStartOf="@+id/textView12"
                    app:layout_constraintTop_toBottomOf="@+id/textView12" />

                <TextView
                    android:id="@+id/textView10"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="64dp"
                    android:text="@string/deadline_period"
                    app:layout_constraintEnd_toEndOf="@+id/textView9"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="@+id/textView9"
                    app:layout_constraintTop_toBottomOf="@+id/textView9" />

                <TextView
                    android:id="@+id/qc_sum_material"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/space"
                    app:layout_constraintEnd_toEndOf="@+id/textView9"
                    app:layout_constraintStart_toStartOf="@+id/textView9"
                    app:layout_constraintTop_toBottomOf="@+id/textView9" />

                <TextView
                    android:id="@+id/qc_sum_material_quntity"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/space"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.651"
                    app:layout_constraintStart_toEndOf="@+id/qc_sum_material"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.174" />

                <TextView
                    android:id="@+id/textView19"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="@string/estimated_unit_cost"
                    app:layout_constraintEnd_toEndOf="@+id/qc_sum_material"
                    app:layout_constraintHorizontal_bias="0.372"
                    app:layout_constraintStart_toStartOf="@+id/qc_sum_material"
                    app:layout_constraintTop_toBottomOf="@+id/qc_sum_material" />

                <TextView
                    android:id="@+id/qc_sum_estimate_unit"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="@string/space"
                    app:layout_constraintEnd_toEndOf="@+id/qc_sum_material_quntity"
                    app:layout_constraintStart_toStartOf="@+id/qc_sum_material_quntity"
                    app:layout_constraintTop_toBottomOf="@+id/qc_sum_material_quntity" />

                <TextView
                    android:id="@+id/qc_sum_estimated_date_from"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="44dp"
                    android:text="@string/space"
                    app:layout_constraintEnd_toEndOf="@+id/qc_sum_estimate_unit"
                    app:layout_constraintStart_toStartOf="@+id/qc_sum_estimate_unit"
                    app:layout_constraintTop_toBottomOf="@+id/qc_sum_estimate_unit" />

                <TextView
                    android:id="@+id/qc_sum_estimated_date_to"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="@string/space"
                    app:layout_constraintEnd_toEndOf="@+id/qc_sum_estimated_date_from"
                    app:layout_constraintStart_toStartOf="@+id/qc_sum_estimated_date_from"
                    app:layout_constraintTop_toBottomOf="@+id/qc_sum_estimated_date_from" />

                <TextView
                    android:id="@+id/qc_sum_estimated_cost"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:background="@drawable/text_view_green_coner"
                    android:text="@string/space"
                    android:textAlignment="center"
                    app:layout_constraintEnd_toEndOf="@+id/qc_sum_estimated_date_to"
                    app:layout_constraintStart_toStartOf="@+id/qc_sum_estimated_date_to"
                    app:layout_constraintTop_toBottomOf="@+id/qc_sum_estimated_date_to" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="#b2b3ad"
            android:text="@string/summary"
            android:textAlignment="center"
            android:textSize="34sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.022" />

        <TextView
            android:id="@+id/textView7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:text="@string/oder_confirm_quotation"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="@+id/textView3"
            app:layout_constraintStart_toStartOf="@+id/textView3"
            app:layout_constraintTop_toBottomOf="@+id/textView3" />

        <Button
            android:id="@+id/qsum_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/cancel"
            app:layout_constraintEnd_toStartOf="@+id/qsum_confirm"
            app:layout_constraintHorizontal_bias="0.277"
            app:layout_constraintStart_toStartOf="@+id/cardView"
            app:layout_constraintTop_toBottomOf="@+id/cardView" />

        <Button
            android:id="@+id/qsum_confirm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="20dp"
            app:backgroundTint = "#4299cf"
            android:text="@string/confirm"
            app:layout_constraintEnd_toEndOf="@+id/cardView"
            app:layout_constraintTop_toBottomOf="@+id/cardView" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>