<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/relativeLayout"
    android:layout_width="match_parent"
    android:layout_height="250dp"
    android:layout_margin="10dp"
    android:background="@drawable/recycle_view_bg"
    >


    <TextView
        android:id="@+id/text_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="13dp"
        android:layout_marginTop="41dp"
        android:layout_marginEnd="201dp"
        android:layout_marginBottom="181dp"
        android:text="@string/order_id"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/text_2"
        android:layout_width="wrap_content"
        android:layout_height="25dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="13dp"
        android:layout_marginTop="9dp"
        android:layout_marginEnd="213dp"
        android:layout_marginBottom="215dp"
        android:text="@string/created_date"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/View_1"
        android:layout_width="wrap_content"
        android:layout_height="25dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="210dp"
        android:layout_marginTop="9dp"
        android:layout_marginEnd="17dp"
        android:layout_marginBottom="212dp"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/View_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="213dp"
        android:layout_marginTop="41dp"
        android:layout_marginEnd="31dp"
        android:layout_marginBottom="186dp"
        android:background="@color/black"
        android:textAlignment="center"
        android:textColor="#FFFDFD"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/View_3"
        android:layout_width="wrap_content"
        android:layout_height="25dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="16dp"
        android:layout_marginTop="91dp"
        android:layout_marginEnd="198dp"
        android:layout_marginBottom="128dp" />

    <TextView
        android:id="@+id/text_3"
        android:layout_width="wrap_content"
        android:layout_height="31dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="14dp"
        android:layout_marginTop="119dp"
        android:layout_marginEnd="210dp"
        android:layout_marginBottom="100dp"
        android:text="@string/date_from" />

    <TextView
        android:id="@+id/text_4"
        android:layout_width="wrap_content"
        android:layout_height="29dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="13dp"
        android:layout_marginTop="152dp"
        android:layout_marginEnd="209dp"
        android:layout_marginBottom="69dp"
        android:text="@string/date_to" />

    <TextView
        android:id="@+id/text_5"
        android:layout_width="225dp"
        android:layout_height="25dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="14dp"
        android:layout_marginTop="182dp"
        android:layout_marginEnd="164dp"
        android:layout_marginBottom="37dp"
        android:text="@string/dep_status" />

    <TextView
        android:id="@+id/View_4"
        android:layout_width="wrap_content"
        android:layout_height="32dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="211dp"
        android:layout_marginTop="90dp"
        android:layout_marginEnd="11dp"
        android:layout_marginBottom="128dp" />

    <TextView
        android:id="@+id/View_5"
        android:layout_width="wrap_content"
        android:layout_height="25dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="213dp"
        android:layout_marginTop="121dp"
        android:layout_marginEnd="9dp"
        android:layout_marginBottom="102dp" />

    <TextView
        android:id="@+id/View_6"
        android:layout_width="wrap_content"
        android:layout_height="25dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="214dp"
        android:layout_marginTop="153dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="72dp" />

    <TextView
        android:id="@+id/View_7"
        android:layout_width="144dp"
        android:layout_height="19dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="215dp"
        android:layout_marginTop="185dp"
        android:layout_marginEnd="33dp"
        android:layout_marginBottom="46dp"
        android:background="#f5ff38"
        android:textAlignment="center"
        android:textColor="#0B0A0A" />

    <Button
        android:id="@+id/button_update"
        android:layout_width="wrap_content"
        android:layout_height="37dp"
        android:layout_alignParentStart="true"

        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="25dp"
        android:layout_marginTop="204dp"
        android:layout_marginEnd="218dp"
        android:layout_marginBottom="9dp"
        android:text="@string/edit" />

    <Button
        android:id="@+id/button_delete"
        android:layout_width="wrap_content"
        android:layout_height="37dp"
        android:layout_alignParentStart="true"

        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="218dp"
        android:layout_marginTop="205dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="8dp"
        android:text="@string/delete" />

</RelativeLayout>